--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "58cfb260-dec3-40eb-852b-25893e10b2f8",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,7 @@
     "import time\n",
     "import datetime\n",
     "import pickle\n",
+    "import requests\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression, LinearRegression, Lasso\n",
     "from sklearn.model_selection import train_test_split \n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "id": "69727eee-e785-4eb5-91fe-925794c50467",
    "metadata": {},
    "outputs": [
@@ -146,7 +147,7 @@
        "[27302 rows x 3 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "5e7380c0-ba97-4aaa-8a65-ce8c861736e0",
    "metadata": {},
    "outputs": [],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 4,
    "id": "579062b3-c2ef-4570-8b0f-83cbc29f21e3",
    "metadata": {},
    "outputs": [],
@@ -222,38 +223,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 82,
    "id": "d153b34d-0b9e-41a6-b9dd-954fed5da05f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_site(all_data, tests=10):\n",
-    "    s_tinkoff_metric = 0\n",
-    "\n",
+    "def test_site(all_data, tests=30):\n",
+    "    s_tinkoff_spent = 0 #сумма выплат банка\n",
+    "    s_budget = 0 #сумма бюджетов всех акций\n",
+    "    s_res = 0 #сумма итоговых баллов\n",
+    "    \n",
     "    s_tests = 0\n",
     "    batch_size = 3\n",
-    "    \n",
+    "\n",
+    "    URL = 'http://127.0.0.1:8080'\n",
+    "\n",
     "    while s_tests < tests:\n",
     "        rid = int(np.random.random()*100)%len(set(all_data['id']))\n",
     "        dx = all_data.loc[all_data['id'] == rid]\n",
     "\n",
-    "        budget = (dx['cashback'].sum())*np.random.random()\n",
-    "        # POST partner\n",
+    "        budget = (dx['cashback'].sum())*np.random.random() + sum([dx.loc[i].cashback for i in list(dx.index)[:10]])\n",
+    "        s_budget += budget\n",
+    "        \n",
+    "        response = requests.post(f\"{URL}/api/partners\", json={\"name\": f\"portner{rid}\", \"budget\": budget})\n",
+    "        idPOnSite = response.json()['id']\n",
+    "\n",
     "        \n",
     "        if len(dx.index) > 10:\n",
-    "            for i in range(0, len(dx.index), batch_size):\n",
-    "                pass\n",
+    "            for i in dx.index:\n",
+    "                requests.put(f\"{URL}/api/partners/{idPOnSite}/cashback\", json={\"date\": dx.loc[i]['date'], \"name\": f\"portner{rid}\", \"cashback\": dx.loc[i]['cashback']})\n",
     "                # PUT cashback from dx[i:i+batch_size]\n",
     "                # GET partner info\n",
     "            s_tests+=1\n",
-    "        # GET partner info -> spent_budget\n",
-    "        s_tinkoff_metric += budget - 5*spent_budget\n",
-    "    return s_tinkoff_metric/s_tests"
+    "            # GET partner info -> spent_budget\n",
+    "            response = requests.get(f\"{URL}/api/partners/{idPOnSite}\")\n",
+    "            spent_budget = response.json()['spent_budget']\n",
+    "    \n",
+    "            tinkoff_spent = max(spent_budget - budget, 0)\n",
+    "            s_tinkoff_spent += tinkoff_spent\n",
+    "            res = spent_budget - 5 * tinkoff_spent\n",
+    "            s_res += res\n",
+    "            print(f'res={round(res, 2)}, budget={round(budget, 2)}, spent_budget={round(spent_budget, 2)}, tinkoff_spent={round(tinkoff_spent, 2)}')\n",
+    "    return s_res / s_tests, s_tinkoff_spent / s_tests, s_budget / s_tests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 6,
    "id": "13d317c3-fd49-4d21-b618-4f579f183d6e",
    "metadata": {},
    "outputs": [],
@@ -263,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 10,
    "id": "13fc17e0-fff5-4b93-afd5-bb69b9708aa1",
    "metadata": {},
    "outputs": [
@@ -287,40 +303,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "id": "3db9e19b-6130-4cf5-a1b4-160a9ea5c999",
+   "execution_count": 83,
+   "id": "327b6661-1478-4ab5-9d20-b3cbe95ffa18",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature Extraction: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.33it/s]\n",
-      "Feature Extraction: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.26it/s]\n",
-      "Feature Extraction: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.33it/s]\n",
-      "Feature Extraction: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.31it/s]\n",
-      "Feature Extraction: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.33it/s]\n",
-      "Feature Extraction: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.29it/s]\n",
-      "Feature Extraction: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.14it/s]\n",
-      "Feature Extraction: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.24it/s]\n",
-      "Feature Extraction: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.20it/s]\n",
-      "Feature Extraction: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.21it/s]\n"
+      "res=78139.98, budget=156078.54, spent_budget=78139.98, tinkoff_spent=0\n",
+      "res=107535.97, budget=149948.0, spent_budget=160551.01, tinkoff_spent=10603.01\n",
+      "res=166401.11, budget=166676.04, spent_budget=166401.11, tinkoff_spent=0\n",
+      "res=1229.37, budget=6641.63, spent_budget=1229.37, tinkoff_spent=0\n",
+      "res=4503.66, budget=10297.41, spent_budget=4503.66, tinkoff_spent=0\n",
+      "res=1229.37, budget=7914.25, spent_budget=1229.37, tinkoff_spent=0\n",
+      "res=331346.34, budget=522198.88, spent_budget=569912.02, tinkoff_spent=47713.14\n",
+      "res=98354.85, budget=136340.03, spent_budget=145836.32, tinkoff_spent=9496.29\n",
+      "res=646.49, budget=2941.13, spent_budget=646.49, tinkoff_spent=0\n",
+      "res=781.98, budget=1922.6, spent_budget=781.98, tinkoff_spent=0\n",
+      "res=116696.68, budget=151780.14, spent_budget=160551.01, tinkoff_spent=8770.87\n",
+      "res=25882.88, budget=34607.79, spent_budget=25882.88, tinkoff_spent=0\n",
+      "res=654808.6, budget=788651.0, spent_budget=654808.6, tinkoff_spent=0\n",
+      "res=-122724.46, budget=255379.72, spent_budget=349905.77, tinkoff_spent=94526.05\n",
+      "res=362565.42, budget=548391.93, spent_budget=594848.56, tinkoff_spent=46456.63\n",
+      "res=1229.37, budget=2294.85, spent_budget=1229.37, tinkoff_spent=0\n",
+      "res=781.98, budget=1453.4, spent_budget=781.98, tinkoff_spent=0\n",
+      "res=8025.84, budget=33170.44, spent_budget=39456.59, tinkoff_spent=6286.15\n",
+      "res=646.49, budget=3515.65, spent_budget=646.49, tinkoff_spent=0\n",
+      "res=21782.38, budget=27357.48, spent_budget=21782.38, tinkoff_spent=0\n",
+      "res=781.98, budget=1736.96, spent_budget=781.98, tinkoff_spent=0\n",
+      "res=177961.65, budget=380617.97, spent_budget=431282.05, tinkoff_spent=50664.08\n",
+      "res=646.49, budget=1936.59, spent_budget=646.49, tinkoff_spent=0\n",
+      "res=2684.98, budget=9698.59, spent_budget=2684.98, tinkoff_spent=0\n",
+      "res=544.02, budget=1089.7, spent_budget=544.02, tinkoff_spent=0\n",
+      "res=44869.67, budget=48840.59, spent_budget=44869.67, tinkoff_spent=0\n",
+      "res=544.02, budget=1338.42, spent_budget=544.02, tinkoff_spent=0\n",
+      "res=781.98, budget=2023.33, spent_budget=781.98, tinkoff_spent=0\n",
+      "res=-88033.39, budget=750613.63, spent_budget=960275.38, tinkoff_spent=209661.75\n",
+      "res=5085.1, budget=14490.93, spent_budget=5085.1, tinkoff_spent=0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(10, 5251.195999999999, 2035.1593806461449, -33101.191999999995)"
+       "(66857.69303315257, 16139.26546003615, 210689.10467609178)"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_model(df, model)"
+    "test_site(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "308e37b3-0c8b-409b-9762-a3a9f50d7b44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -339,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
